## first step of implementation
* make fields
* make parcelable logic
* start make restore logic

--- a/constraintexpandablelayout/src/main/res/values/strings.xml
+++ b/constraintexpandablelayout/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">ConstraintExpandableLayout</string>
-    <string name="more">More</string>
+    <string name="defaultMoreText">More</string>
 </resources>
